dev/terraform/aks/k3s/nginx-ingress.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: www.prodigiesai.com
      http:
        paths:
          - path: /opencats
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
